--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
         <thucydides.version>1.8.4</thucydides.version>
         <jelastic.context>gameoflife</jelastic.context>
         <jelastic.environment>wakaleo</jelastic.environment>
+        <sonar.host.url>
+                  http://localhost:9000
+                </sonar.host.url>
     </properties>
 
     <scm>
