--- a/pom.xml
+++ b/pom.xml
@@ -415,6 +415,11 @@
                                 <artifactId>gameoflife-build</artifactId>
                                 <version>${project.version}</version>
                             </dependency>
+                            <dependency>
+                              <groupId>org.sonarsource.sonarqube</groupId>
+                                <artifactId>sonar-plugin-api</artifactId>
+                                 <version>5.6.3</version>
+                                 </dependency>
                         </dependencies>
                     </plugin>
                 </plugins>
